# vibeDeploy

./: .gitignore  DEMO_README.md  LICENSE  README.md
agent/: .env.example  .env.test  auth.py  cost.py  graph.py  guardrails.py  llm.py  main.py  model_capabilities.py  pipeline_runtime.py  pyproject.toml  requirements.txt  run_server.py  server.py  sse.py  state.py
agent/council/: advocate.py  architect.py  catalyst.py  guardian.py  scout.py  strategist.py
agent/db/: connection.py  deployment_metrics.py  schema.sql  store.py  zp_store.py
agent/evaluations/: metrics.py  runner.py
agent/gradient/: a2a.py  agents.py  mcp_client.py  router.py  versioning.py
agent/nodes/: api_contract_generator.py  blueprint.py  brainstorm.py  build_validator.py  code_evaluator.py  code_generator.py  contract_validator.py  decision_gate.py  deployer.py  design_system_generator.py  design_tokens.py  doc_generator.py  enrich.py  experience_agent.py  fix_storm.py  input_processor.py  inspiration_agent.py  layout_archetypes.py  local_runtime_validator.py  motion_tokens.py  per_file_code_generator.py  per_file_prompts.py  prompt_strategist.py  pydantic_generator.py  scaffold_generator.py  seed_data.py  type_generator.py  type_injection.py  typography.py  vibe_council.py  wiring_validator.py
agent/prompts/: code_templates.py  council_prompts.py  doc_templates.py
agent/providers/: __init__.py  anthropic_adapter.py  google_adapter.py  openai_adapter.py  registry.py
agent/scripts/: deploy.sh  probe_models.py  run_flagships.py
agent/tests/: conftest.py  test_a2a_protocol.py  test_llm.py  (+46 more)
(+142 files in other folders)
